@@ -1,3 +1,9 @@
+2011-04-08  Xinliang David Li  <davidxl@google.com>
+
+	* final.c (dump_basic_block_info): New function.
+	(final): Dump basic block.
+	(final_scan_insn): Remove old dump.
+
 2011-03-14  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/48098
